tmo/4-1-flood_fill.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1r3p1.42.fr
Darwin 16.7.0 x86_64
$> date
Tue Apr 10 12:32:03 CEST 2018
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2018/c-exam-alone-in-the-dark-beginner/exam_20180410/qtran

= Git history ==================================================================
$> git -C /var/folders/hc/7rpd2rh14sdd6kqvmp0c_mp80000gq/T/tmpJz167Z/user log --pretty='%H - %an, %ad : %s'
5b0284848c7debf08d41cc2821a42c058fe3142a - Exam 42, Tue Apr 10 12:31:46 2018 +0200 : All is best
1595fa680575e22a16fa4bf2e06b5d773c315380 - Exam 42, Tue Apr 10 11:49:03 2018 +0200 : all is best
9c7094aec79ffefefb83da4717fa277a61126fd0 - Exam 42, Tue Apr 10 11:48:24 2018 +0200 : all is best
 
= Collected files ==========================================
$> ls -lAR /var/folders/hc/7rpd2rh14sdd6kqvmp0c_mp80000gq/T/tmpJz167Z/user
total 8
-rw-r--r--  1 deepthought  deepthought  906 Apr 10 12:32 __GIT_HISTORY
drwxr-xr-x  6 deepthought  deepthought  204 Apr 10 12:32 flood_fill
drwxr-xr-x  3 deepthought  deepthought  102 Apr 10 12:32 moment

/var/folders/hc/7rpd2rh14sdd6kqvmp0c_mp80000gq/T/tmpJz167Z/user/flood_fill:
total 32
-rw-r--r--  1 deepthought  deepthought  1413 Apr 10 12:32 flood_fill.c
-rw-r--r--  1 deepthought  deepthought  1103 Apr 10 12:32 ft_lib.h
-rw-r--r--  1 deepthought  deepthought  1248 Apr 10 12:32 stack.c
-rw-r--r--  1 deepthought  deepthought   184 Apr 10 12:32 t_point.h

/var/folders/hc/7rpd2rh14sdd6kqvmp0c_mp80000gq/T/tmpJz167Z/user/moment:
total 8
-rw-r--r--  1 deepthought  deepthought  2455 Apr 10 12:32 moment.c
 
= flood_fill ===================================================================
$> clang -Wextra -Wall -Werror flood_fill.c stack.c main.c -o user_exe 
flood_fill.c:21:12: error: too few arguments to function call, expected 2, have 1
        push(begin);
        ~~~~      ^
./ft_lib.h:18:1: note: 'push' declared here
void    push(int y, int x);
^
1 error generated.
stack.c:16:7: error: redefinition of 'index' as different kind of symbol
int                     index;
                        ^
stack.c:16:7: note: unguarded header; consider using #ifdef guards or #pragma once
stack.c:16:7: note: previous definition is here
stack.c:20:17: error: implicitly declaring library function 'malloc' with type 'void *(unsigned long)' [-Werror,-Wimplicit-function-declaration]
        st = (t_point*)malloc(sizeof(t_point) * 1000);
                       ^
stack.c:20:17: note: include the header <stdlib.h> or explicitly provide a declaration for 'malloc'
stack.c:21:8: error: non-object type 'char *(const char *, int)' is not assignable
        index = -1;
        ~~~~~ ^
stack.c:30:5: error: cannot increment value of type 'char *(const char *, int)'
        st[++index]     = t;
           ^ ~~~~~
stack.c:36:10: error: returning 'int' from a function with incompatible result type 't_point'
                return (-1);
                       ^~~~
stack.c:37:7: error: cannot decrement value of type 'char *(const char *, int)'
        index--;
        ~~~~~^
stack.c:38:12: error: array subscript is not an integer
        return (st[index + 1]);
                  ^~~~~~~~~~
stack.c:43:16: error: comparison between pointer and integer ('char *(*)(const char *, int)' and 'int') [-Werror]
        return (index == -1);
                ~~~~~ ^  ~~
8 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
